--- a/configs/config.env
+++ b/configs/config.env
@@ -1,4 +1,4 @@
-MONGOURL: mongodb+srv://fran2109:Fran-2109@cluster0.9ghdw.mongodb.net/ecommerce?retryWrites=true&w=majority
+MONGOURL: mongodb+srv://klein994:Kl3in171@cluster0.pg7zl.mongodb.net/?retryWrites=true&w=majority
 MONGOOPTIONS: {"useNewUrlParser":true,"useUnifiedTopology":true}
 PRODUCTSFILE: ./data/products.txt
 MESSAGESFILE: ./data/messages.txt
